my-service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  labels:
    app: project_app
spec:
  type: ClusterIP
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: project_app
